--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
       </section>
       <section class="card-work">
         <div class="card-info">
-          <h2 class="card-title">Work</h2>
+          <h2 class="card-title">Word</h2>
           <div class="timeframe">
-            <h2 class="total-time">32hrs</h2>
+            <h2 class="total-time"></h2>
             <h3 class="prev-time">
-              <span class="label-action">Last-week &mdash; </span>
-              <span class="label-time">36hrs</span>
+              <span class="label-action"></span>
+              <span class="label-time"></span>
             </h3>
           </div>
         </div>
@@ -68,10 +68,10 @@
         <div class="card-info">
           <h2 class="card-title">Play</h2>
           <div class="timeframe">
-            <h2 class="total-time">32hrs</h2>
+            <h2 class="total-time"></h2>
             <h3 class="prev-time">
-              <span class="label-action">Last-week &mdash; </span>
-              <span class="label-time">36hrs</span>
+              <span class="label-action"></span>
+              <span class="label-time"></span>
             </h3>
           </div>
         </div>
@@ -80,10 +80,10 @@
         <div class="card-info">
           <h2 class="card-title">Study</h2>
           <div class="timeframe">
-            <h2 class="total-time">32hrs</h2>
+            <h2 class="total-time"></h2>
             <h3 class="prev-time">
-              <span class="label-action">Last-week &mdash; </span>
-              <span class="label-time">36hrs</span>
+              <span class="label-action"></span>
+              <span class="label-time"></span>
             </h3>
           </div>
         </div>
@@ -92,10 +92,10 @@
         <div class="card-info">
           <h2 class="card-title">Study</h2>
           <div class="timeframe">
-            <h2 class="total-time">32hrs</h2>
+            <h2 class="total-time"></h2>
             <h3 class="prev-time">
-              <span class="label-action">Last-week &mdash; </span>
-              <span class="label-time">36hrs</span>
+              <span class="label-action"></span>
+              <span class="label-time"></span>
             </h3>
           </div>
         </div>
@@ -104,22 +104,22 @@
         <div class="card-info">
           <h2 class="card-title">Social</h2>
           <div class="timeframe">
-            <h2 class="total-time">32hrs</h2>
+            <h2 class="total-time"></h2>
             <h3 class="prev-time">
-              <span class="label-action">Last-week &mdash; </span>
-              <span class="label-time">36hrs</span>
+              <span class="label-action"></span>
+              <span class="label-time"></span>
             </h3>
           </div>
         </div>
       </section>
       <section class="card-selfcare">
         <div class="card-info">
-          <h2 class="card-title">Social</h2>
+          <h2 class="card-title">Self-Care</h2>
           <div class="timeframe">
-            <h2 class="total-time">32hrs</h2>
+            <h2 class="total-time"></h2>
             <h3 class="prev-time">
-              <span class="label-action">Last-week &mdash; </span>
-              <span class="label-time">36hrs</span>
+              <span class="label-action"> </span>
+              <span class="label-time"></span>
             </h3>
           </div>
         </div>
