added active state on button and event delegation

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
           </div>
         </div>
         <div class="user-action">
-          <button class="btn-action">Daily</button>
+          <button class="btn-action active">Daily</button>
           <button class="btn-action">Weekly</button>
           <button class="btn-action">Monthly</button>
         </div>
       </section>
       <section class="card-work">
         <div class="card-info">
-          <h2 class="card-title">Word</h2>
+          <h2 class="card-title">Work</h2>
           <div class="timeframe">
             <h2 class="total-time"></h2>
             <h3 class="prev-time">
