again minor improvements by using data attributes

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
           </div>
         </div>
         <div class="user-action">
-          <button class="btn-action active">Daily</button>
-          <button class="btn-action">Weekly</button>
-          <button class="btn-action">Monthly</button>
+          <button class="btn-action active" data-range="daily">Daily</button>
+          <button class="btn-action" data-range="weekly">Weekly</button>
+          <button class="btn-action" data-range="monthly">Monthly</button>
         </div>
       </section>
       <section class="card-work">
